grammar.js
    source_file: _ => 'hello',

    // Unicode escapes
    type: $ => choice(
      seq(repeat(choice('erased', 'given')), $.fun_arg_types, '=>', $.type),
      seq($.hk_type_param_clause, '=>', $.type),
      $.match_type,
      $.infix_type
    ),

    type_args: $ => seq('[', $.arg_types, ']'),
